Fix align problems

--- a/client/src/app/components/identity/IdentityHistory.scss
+++ b/client/src/app/components/identity/IdentityHistory.scss
@@ -21,12 +21,10 @@
     text-decoration: none;
   }
 }
-.card--content {
+
+.history-content {
   display: flex;
   align-items: center;
-}
-.history-content {
-  margin: 30px 0;
 }
 
 .history-tree {
